--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,33 +1,55 @@
 <resources>
     <string name="app_name">Filmoteca</string>
     <string name="functionality">Funcionalidad no implementada</string>
+    <string name="film_editing">Editando película</string>
+    <string name="film_edit_result_ok">Editado correctamente</string>
+    <string name="film_edit_result_cancelled">Edición cancelada</string>
+
+    <!-- ABOUT -->
     <string name="developed_by">Creada por Angel Terol</string>
     <string name="to_webpage">Ir al sitio web</string>
     <string name="support">Obtener soporte</string>
     <string name="back">Volver</string>
+    <string name="email_to" translatable="false">jtm37@alu.ua.es</string>
+    <string name="webPage" translatable="false">https://egenad.github.io/</string>
+
+    <!-- FILM LIST -->
     <string name="film_a">Ver película A</string>
     <string name="film_b">Ver película B</string>
     <string name="about">Acerca de</string>
+
+    <!-- FILM DATA -->
     <string name="film_data"><h1><b>Datos de la película</b></h1></string>
     <string name="film_imdb"><b>VER EN IMDB</b></string>
     <string name="film_edit"><b>EDITAR PELICULA</b></string>
     <string name="film_return"><b>VOLVER AL PRINCIPAL</b></string>
-    <string name="film_editing">Editando película</string>
-    <string name="film_save">Guardar</string>
-    <string name="film_cancel">Cancelar</string>
     <string name="film_a_name">Harry Potter: La Piedra Filosofal</string>
     <string name="film_b_name">Indiana Jones: En busca del Arca Perdida</string>
     <string name="film_related_name">La Bella y la Bestia</string>
+    <string name="film_image_cd">Imagen de la película</string>
     <string name="film_edit_result">Editado</string>
-    <string name="film_edit_result_ok">Editado correctamente</string>
-    <string name="film_edit_result_cancelled">Edición cancelada</string>
     <string name="film_year_header"><i>Año:</i></string>
     <string name="extended_version">Versión extendida</string>
-
     <string name="film_year_value" translatable="false">1985</string>
     <string name="film_type_and_genere" translatable="false">Bluray, Sci-Fi</string>
     <string name="film_director_value" translatable="false">Robert Zemeckis</string>
     <string name="film_director_header" translatable="false"><i>Director:</i></string>
-    <string name="email_to" translatable="false">jtm37@alu.ua.es</string>
-    <string name="webPage" translatable="false">https://egenad.github.io/</string>
+
+    <!-- FILM EDIT -->
+    <string name="film_photo">CAPTURA FOTOGRAFIA</string>
+    <string name="film_select_image">SELECCIONA IMAGEN</string>
+    <string name="film_save">GUARDAR</string>
+    <string name="film_cancel">CANCELAR</string>
+    <string name="film_edit_title">Título de la película</string>
+    <string name="film_edit_director">Nombre del director</string>
+    <string name="film_edit_year">Año</string>
+    <string name="film_edit_imdb">Enlace a IMDB</string>
+    <string name="film_edit_comments">Comentarios</string>
+    <string name="film_edit_genere_1" translatable="false">Sci-Fi</string>
+    <string name="film_edit_genere_2">Acción</string>
+    <string name="film_edit_genere_3" translatable="false">Romance</string>
+    <string name="film_edit_format_1" translatable="false">DVD</string>
+    <string name="film_edit_format_2" translatable="false">VHS</string>
+    <string name="film_edit_format_3" translatable="false">Blue-Ray</string>
+
 </resources>
