Falta ejercicio 3 parte 2 y ejercicio 4

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Filmoteca</string>
-    <string name="functionality">Functionality not implemented</string>
-    <string name="developed_by">Created by Angel Terol</string>
-    <string name="to_webpage">Go to webpage</string>
-    <string name="support">Obtain support</string>
-    <string name="back">Return</string>
-    <string name="film_a">Watch film A</string>
-    <string name="film_b">Watch film B</string>
-    <string name="about">About</string>
     <string name="film_data"><b>Film information</b></string>
     <string name="film_imdb"><b>WATCH IN IMDB</b></string>
     <string name="film_edit">Edit film</string>
     <string name="film_return">Return to principal</string>
     <string name="film_editing">Editing film</string>
-    <string name="film_a_name">Harry Potter: Philosopher´s Stone</string>
-    <string name="film_b_name">Indiana Jones: Raiders of the Lost Ark</string>
-    <string name="film_related_name">Beauty and the Beast</string>
     <string name="film_edit_result">Edited</string>
     <string name="film_edit_result_ok">Edited correctly</string>
     <string name="film_edit_result_cancelled">Canceled edition</string>
     <string name="film_year_header"><i>Year:</i></string>
     <string name="extended_version">Extended version</string>
+    <string name="film_genre_0">Action</string>
+    <string name="film_genre_1">Comedy</string>
+    <string name="film_genre_5">Fantasy</string>
+
+    <!-- ABOUT -->
+    <string name="developed_by">Created by Angel Terol</string>
+    <string name="to_webpage">Go to webpage</string>
+    <string name="support">Obtain support</string>
+    <string name="back">Return</string>
+
+
+    <!-- FILM LIST -->
+    <string name="imageDescription">Film poster</string>
+    <string name="about">About</string>
 
     <!-- FILM DATA -->
-    <string name="film_image_cd">Image of the film</string>
-
+    <string name="film_rf_name">Back to the future</string>
+    <string name="film_h1_name">Harry Potter and the Philosopher´s Stone</string>
+    <string name="film_h2_name">Harry Potter and the Chamber of Secrets</string>
+    <string name="film_ij_name">Indiana Jones: Raiders of the Lost Ark</string>
 
     <!-- FILM EDIT -->
     <string name="film_photo">TAKE SCREENSHOT</string>
