--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,6 +42,10 @@
     <string name="film_edit_year">Year</string>
     <string name="film_edit_imdb">Link to IMDB</string>
     <string name="film_edit_comments">Comments</string>
-    <string name="film_edit_genere_2">Action</string>
+
+    <!-- ERROR -->
+
+    <string name="error_open_camera">ERROR: Unable to open phone camera</string>
+    <string name="error_take_photo">ERROR: The photo couldn´t be saved</string>
 
 </resources>
