--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,7 +24,8 @@
 
     <!-- FILM LIST -->
     <string name="imageDescription">Film poster</string>
-    <string name="about">About</string>
+    <string name="menu_about">About</string>
+    <string name="menu_add_film">Add Film</string>
 
     <!-- FILM DATA -->
     <string name="film_rf_name">Back to the future</string>
