No selecciona pero sale el action bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_about">Acerca de</string>
     <string name="imageDescription">Póster de la película</string>
     <string name="menu_add_film">Añadir Película</string>
+    <string name="delete_films">Eliminar Películas</string>
 
     <!-- FILM DATA -->
     <string name="film_data"><h1><b>Datos de la película</b></h1></string>
