--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_about">About</string>
     <string name="menu_add_film">Add Film</string>
     <string name="delete_films">Delete Films</string>
+    <string name="films_selected">selected</string>
 
     <!-- FILM DATA -->
     <string name="film_rf_name">Back to the future</string>
@@ -43,6 +44,8 @@
     <string name="film_edit_year">Year</string>
     <string name="film_edit_imdb">Link to IMDB</string>
     <string name="film_edit_comments">Comments</string>
+    <string name="film_default_title">Default Name</string>
+    <string name="film_default_director">Default Director´s Name</string>
 
     <!-- ERROR -->
 
