--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="imageDescription">Póster de la película</string>
     <string name="menu_add_film">Añadir Película</string>
     <string name="delete_films">Eliminar Películas</string>
+    <string name="films_selected">seleccionado/s</string>
 
     <!-- FILM DATA -->
     <string name="film_data"><h1><b>Datos de la película</b></h1></string>
@@ -56,6 +57,9 @@
     <string name="film_edit_year">Año</string>
     <string name="film_edit_imdb">Enlace a IMDB</string>
     <string name="film_edit_comments">Comentarios</string>
+    <string name="film_default_title">Nombre por defecto</string>
+    <string name="film_default_director">Director por defecto</string>
+    <string name="film_default_imdb" translatable="false">http://www.imdb.com</string>
 
     <!-- ERRORS -->
 
