--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,10 @@
     <string name="error_take_photo">ERROR: No se ha podido guardar la fotografía</string>
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
+    <!-- FIRE CLOUD MESSAGING -->
+    <string name="permissions_needed">Permiso necesario</string>
+    <string name="permissions_ask">Esta aplicación necesita el permiso de notificaciones para avisarte sobre eventos importantes. ¿Quieres concederlo?</string>
+    <string name="accept">Aceptar</string>
+    <string name="no_thanks">No, gracias</string>
+
 </resources>
